# RP2040-HAT-FREERTOS-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  getting_started.md  rp2040_hat_freertos_c-patch.cmake  rp2040_hat_freertos_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/dhcp_dns/: CMakeLists.txt  README.md  w5x00_dhcp_dns.c
examples/mqtt/: CMakeLists.txt  README.md  w5x00_mqtt.c
examples/rp_eth_io_tests/: CMakeLists.txt  main.c  tests.c  tests.h
examples/rp_eth_io_tests/rp_eth_io/: rp_eth_io_adc.c  rp_eth_io_adc.h  rp_eth_io_common.c  rp_eth_io_common.h  rp_eth_io_i2c.c  rp_eth_io_i2c.h  rp_eth_io_init.c  rp_eth_io_init.h  rp_eth_io_pins.c  rp_eth_io_pins.h
examples/tcp_client_over_ssl/: CMakeLists.txt  README.md  w5x00_tcp_client_over_ssl.c
libraries/: CMakeLists.txt
port/: CMakeLists.txt  port_common.h
port/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/ioLibrary_Driver/inc/: w5x00_gpio_irq.h  w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_gpio_irq.c  w5x00_spi.c
port/mbedtls/inc/: ssl_config.h
port/timer/: timer.c  timer.h
